# cpp-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: CMakeLists.txt  README.md
{{cookiecutter.project_slug}}/doc/: Doxyfile
{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.hpp
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  main.cpp
{{cookiecutter.project_slug}}/src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
{{cookiecutter.project_slug}}/test/: CMakeLists.txt
{{cookiecutter.project_slug}}/test/utils/: CMakeLists.txt  utils_test.cpp
